--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "mountains",
   "version": "1.0.0",
-  "description": "Landing page",
+  "description": "Landing page for Mountains",
   "main": "./index.js",
   "homepage": "https://multipleillusionsi.github.io/Mountains/",
   "scripts": {
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "watch:sass": "node-sass dist/sass/main.scss dist/css/style.css -w",
+    "devserver": "live-server dist",
+    "start": "npm-run-all --parallel devserver watch:sass",
+    "compile:sass": "node-sass dist/sass/main.scss dist/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" dist/css/style.comp.css -o dist/css/style.prefix.css",
+    "compress:css": "node-sass dist/css/style.prefix.css dist/css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "author": "Zakharov S.S.",
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^2.1.1"
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "autoprefixer": "^9.6.1",
+    "postcss-cli": "^6.1.3",
+    "npm-run-all": "^4.1.5",
+    "live-server": "1.2.1"
   }
 }
